compilers/ID/cool/regression/BASE_cgtest/old_cool/equalassoc.cl.stderr
"./BASE_cgtest/equalassoc.cl", line 4: parse error at or near '='
Compilation halted due to lex and parse errors
