compilers/ID/cool/regression/BASE_cgtest/old_cool/equalassoc.cl
class Main is

	main():Object is 
		5 = 6 = true
	end;
end;
